Fix pixel alignment of widget centres in menu
There must be a better way, but this works!

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -4,6 +4,16 @@
     padding: 0;
 }
 
+/*
+ * This is ugly, but seems to work - narrow the "spacer"/alignment boxes
+ *
+ * The other option would be negative margins, but that
+ * breaks things.
+ */
+.panel-media-indicator .popup-sub-menu > * > * > :first-child {
+    width: 14px;
+}
+
 .player-buttons {
     spacing: 2px;
 }
